send-signing-links

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -29,5 +29,8 @@
 
         <input type="submit" value="Upload and Set Signers">
     </form>
+
+    <!-- Link to send emails to signers -->
+    <a href="/send_emails" class="button-link">Send Signing Links</a>    
 </body>
 </html>
