--- a/templates/merge_success.html
+++ b/templates/merge_success.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Merge Successful</title>
+  <meta http-equiv="refresh" content="3; url={{ download_url }}">
   <style>
     body {
       font-family: Arial, sans-serif;
