--- a/templates/sign.html
+++ b/templates/sign.html
@@ -52,7 +52,10 @@
         </div>
 
         <!-- Simplified form (standard POST) -->
-        <form class="upload-form" method="POST" enctype="multipart/form-data">
+        <form class="upload-form" 
+              action="{{ url_for('sign_document', signer_name=signer_name) }}" 
+              method="POST" 
+              enctype="multipart/form-data">
             <input type="file" name="signature" accept="image/*" required><br><br>
             <button type="submit">Upload Signature</button>
         </form>
