fixing the preview image 404 error

--- a/templates/click_to_place.html
+++ b/templates/click_to_place.html
@@ -68,7 +68,7 @@
     <h2>Click on the image to place a signature</h2>
 
     <div style="position: relative;">
-        <img id="pdfImage" src="{{ url_for('static', filename='preview.jpg') }}">
+        <img id="pdfImage" src="{{ url_for('static', filename=preview_name) }}">
         <div id="dot"></div>
     </div>
 
