fixing the DONE button redirection

--- a/templates/click_to_place.html
+++ b/templates/click_to_place.html
@@ -181,8 +181,8 @@
         }
 
         function finishSetup() {
-            alert("Signer setup completed. You will now return to the home page.");
-            window.location.href = "/";
+            alert("Signer setup completed. You will now see the summary.");
+            window.location.href = "/done/{{ pdf }}";
         }
 
         function copySignerLink() {
